adicionando coluna categoria a tabela de produtos
